Add !bangs for Swift 1.2.

--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -387,6 +387,6 @@
         <image name="tableViewIcon" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="T1V-Tq-hbB"/>
+        <segue reference="AZJ-Nd-XC6"/>
     </inferredMetricsTieBreakers>
 </document>
